language/move-lang/tests/move_check/typing/neq_invalid.exp
error: 

    ┌── tests/move_check/typing/neq_invalid.move:13:13 ───
    │
 13 │         (0: u8) != (1: u128);
    │             -- The type: 'u8'
    │                    ^^^^^^^^^ Incompatible arguments to '!='
    │                        ---- Is not compatible with: 'u128'
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:14:9 ───
    │
 14 │         0 != false;
    │         - The type: integer
    │              ----- Is not compatible with: 'bool'
    │              ^^^^^ Incompatible arguments to '!='
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:15:9 ───
    │
 15 │         &0 != 1;
    │         -- Is not compatible with: '&{integer}'
    │               - The type: integer
    │               ^ Incompatible arguments to '!='
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:16:9 ───
    │
 16 │         1 != &0;
    │         - The type: integer
    │              -- Is not compatible with: '&{integer}'
    │              ^^ Incompatible arguments to '!='
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:12:37 ───
    │
 12 │     fun t0(r: &R, r_mut: &mut R, s: S, s_ref: &S, s_mut: &mut S) {
    │                                     - The type: '0x8675309::M::S'
    │                                               -- Is not compatible with: '&0x8675309::M::S'
    ·
 17 │         s != s_ref;
    │              ^^^^^ Incompatible arguments to '!='
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:12:37 ───
    │
 12 │     fun t0(r: &R, r_mut: &mut R, s: S, s_ref: &S, s_mut: &mut S) {
    │                                     - Is not compatible with: '0x8675309::M::S'
    │                                                          ------ The type: '&mut 0x8675309::M::S'
    ·
 18 │         s_mut != s;
    │                  ^ Incompatible arguments to '!='
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:3:5 ───
    │
  3 │     resource struct R {
    │     -------- Is found to be a non-copyable type here
    ·
 21 │     fun t1(r: R) {
    │               - The type: '0x8675309::M::R'
 22 │         r != r;
    │         ^^^^^^ Cannot use '!=' on resource values. This would destroy the resource. Try borrowing the values with '&' first.'
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:26:9 ───
    │
 26 │         G0{} != G0{};
    │         ^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:26:17 ───
    │
 26 │         G0{} != G0{};
    │                 ^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:27:9 ───
    │
 27 │         G1{} != G1{};
    │         ^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:7:18 ───
    │
  7 │     struct G1<T: resource> {}
    │                  -------- Is found to be a non-copyable type here
    ·
 27 │         G1{} != G1{};
    │         ^^^^^^^^^^^^ Cannot use '!=' on resource values. This would destroy the resource. Try borrowing the values with '&' first.'
    │                 ---- The type: '0x8675309::M::G1<_>'
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:27:17 ───
    │
 27 │         G1{} != G1{};
    │                 ^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:28:9 ───
    │
 28 │         G2{} != G2{};
    │         ^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:8:15 ───
    │
  8 │     struct G2<T> {}
    │               - Is found to be a non-copyable type here
    ·
 28 │         G2{} != G2{};
    │         ^^^^^^^^^^^^ Cannot use '!=' on resource values. This would destroy the resource. Try borrowing the values with '&' first.'
    │                 ---- The type: '0x8675309::M::G2<_>'
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:28:17 ───
    │
 28 │         G2{} != G2{};
    │                 ^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:32:9 ───
    │
 32 │         () != ();
    │         ^^^^^^^^ Invalid arguments to '!='
    │               -- Expected a single type, but found expression list type: '()'
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:33:9 ───
    │
 33 │         (0, 1) != (0, 1);
    │         ^^^^^^^^^^^^^^^^ Invalid arguments to '!='
    │                   ------ Expected a single type, but found expression list type: '(u64, u64)'
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:34:9 ───
    │
 34 │         (1, 2, 3) != (0, 1);
    │         --------- The expression list type of length 3: '({integer}, {integer}, {integer})'
    │                      ------ Is not compatible with the expression list type of length 2: '({integer}, {integer})'
    │                      ^^^^^^ Incompatible arguments to '!='
    │

error: 

    ┌── tests/move_check/typing/neq_invalid.move:35:9 ───
    │
 35 │         (0, 1) != (1, 2, 3);
    │         ------ The expression list type of length 2: '({integer}, {integer})'
    │                   --------- Is not compatible with the expression list type of length 3: '({integer}, {integer}, {integer})'
    │                   ^^^^^^^^^ Incompatible arguments to '!='
    │

